Added another image and link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Axiom Network</title>
+    <link rel="icon" href="images/Plains_Grass_Block.webp" type="image/x-icon">
 </head>
 <body>
     <h1>Axiom Network</h1>
@@ -16,8 +17,8 @@
             <a href="ContentCreators.html" class="CC-link">
                 <img src="Images/minecraft-profile-pictures-736-x-981-3rhrsp2jm2x9wut2 (1).jpg" alt="Content Creators" class="CC-button">
             </a>
-            <a href=" " class="rounded-box">
-                <img src="" alt=" " class=" ">
+            <a href="https://www.minecraft.net/en-us/store/minecraft-deluxe-collection-pc?tabs=%7B%22details%22%3A0%7D" target="_blank" class="box-link">
+                <img src="Images/minecraft-banner.jpg" alt="" class="box-button">
             </a>
         </div>
     </div>
