Finished Adding Images

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
                 <img src="Images/discord-logo-1080-x-1920-4jguqamuc0vqmh0u (1).jpg" alt="Join our Discord" class="discord-button">
             </a>
             <a href="ContentCreators.html" class="CC-link">
-                <img src="Images/minecraft-profile-pictures-736-x-981-3rhrsp2jm2x9wut2 (1).jpg" alt="Content Creators" class="CC-button">
+                <img src="Images/Axiom Logo.webp" alt="Content Creators" class="CC-button">
             </a>
             <a href="https://www.minecraft.net/en-us/store/minecraft-deluxe-collection-pc?tabs=%7B%22details%22%3A0%7D" target="_blank" class="box-link">
-                <img src="Images/minecraft-banner.jpg" alt="" class="box-button">
+                <img src="Images/Axiom Network Cropped.webp" alt="" class="box-button">
+            </a>
+            <a href="https://www.minecraft.net/en-us/store/minecraft-deluxe-collection-pc?tabs=%7B%22details%22%3A0%7D" target="_blank" class="box2-link">
+                <img src="Images/Minecraft-beach.jpg" alt="" class="box2-button">
             </a>
         </div>
     </div>
