Back button on the cc page

--- a/ContentCreators.html
+++ b/ContentCreators.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Content Creators</title>
+    <link rel="icon" href="images/Plains_Grass_Block.webp" type="image/x-icon">
 </head>
 <body>
     <h1>Co<span class="underline">ntent Creato</span>rs</h1>
     <div class="content">
         <div class="centre-image">
-            <a href="index.html" class="box3-link">
-                <img src="Images/Plains_Grass_Block.webp" alt="" class="box3-button">
-            </a>
+            <div class="box3-container">
+                <a href="index.html" class="box3-link">
+                    <img src="Images/Plains_Grass_Block.webp" alt="" class="box3-button">
+                </a>
+                <div class="box3-text">Go Back</div>
+            </div>
         </div>
     </div>
     <footer>
