--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a href="ContentCreators.html" class="CC-link">
                 <img src="Images/Axiom Logo.webp" alt="Content Creators" class="CC-button">
             </a>
-            <a href="https://www.minecraft.net/en-us/store/minecraft-deluxe-collection-pc?tabs=%7B%22details%22%3A0%7D" target="_blank" class="box-link">
-                <img src="Images/Axiom Network Cropped.webp" alt="" class="box-button">
+            <a href="https://www.minecraft.net/en-us/store/minecraft-deluxe-collection-pc?tabs=%7B%22details%22%3A0%7D" target="_blank" class="plugins-link">
+                <img src="Images/Axiom Network Cropped.webp" alt="" class="plugins-button">
             </a>
             <a href="https://www.minecraft.net/en-us/store/minecraft-deluxe-collection-pc?tabs=%7B%22details%22%3A0%7D" target="_blank" class="box2-link">
                 <img src="Images/Minecraft-beach.jpg" alt="" class="box2-button">
