Added plugins page and enchantment calculator

--- a/ContentCreators.html
+++ b/ContentCreators.html
@@ -9,18 +9,60 @@
 </head>
 <body>
     <h1>Co<span class="underline">ntent Creato</span>rs</h1>
-    <div class="content">
-        <div class="centre-image">
-            <div class="box3-container">
-                <a href="index.html" class="box3-link">
-                    <img src="Images/Plains_Grass_Block.webp" alt="" class="box3-button">
+    <div class="content-creators">
+        <div class="centre-image-cc">
+            <div class="goBack-container">
+                <a href="index.html" class="goBack-link">
+                    <img src="Images/Plains_Grass_Block.webp" alt="" class="goBack-button">
                 </a>
-                <div class="box3-text">Go Back</div>
+                <div class="goBack-text">Go Back</div>
             </div>
+            <a href="" target="_blank" class="youtube-link">
+                <img src="Images/Youtube-image.png" alt="Youtube" class="youtube-button">
+            </a>
+            <a href="" target="_blank" class="twitch-link">
+                <img src="Images/twitch-name.png" alt="Content Creators" class="twitch-button">
+            </a>
+            <a href="#" class="colour-box red-box">
+            </a>
+            <a href="#" class="colour-box purple-box">
+            </a>
+        </div>
+        <div class="creators-grid">
+            <a href="https://www.youtube.com/@MichaelMusicYT" target="_blank" class="creator-box">
+                <img src="Images/MichaelMusic.jpg" alt="Youtube" class="creator-image">
+                <p class="creator-name">MichaelMusic</p>
+            </a>
+            <a href="https://www.youtube.com/@BluePanda_3245" target="_blank" class="creator-box">
+                <img src="Images/BluePanda.jpg" alt="Youtube">
+                <p class="creator-name">BluePanda2303</p>
+            </a>
+            <a href="https://www.youtube.com/@Tibsiegames" target="_blank" class="creator-box">
+                <img src="Images/Tibsiegames.jpg" alt="Youtube" class="creator-image">
+                <p class="creator-name">Tibsie_Games</p>
+            </a>
+            <a href="https://www.youtube.com/@Lettus-u6p" target="_blank" class="creator-box">
+                <img src="Images/Lettus.jpg" alt="Youtube" class="creator-image">
+                <p class="creator-name">Lettus</p>
+            </a>
+            <a href="https://www.youtube.com/@MrNotKnownMC" target="_blank" class="creator-box">
+                <img src="Images/MrNotKnown.jpg" alt="Youtube" class="creator-image">
+                <p class="creator-name">MrNotKnown</p>
+            </a>
+            <a href="https://www.youtube.com/@Penjamonkie" target="_blank" class="creator-box">
+                <img src="Images/Penjamonkie.jpg" alt="Youtube" class="creator-image">
+                <p class="creator-name">Penjamonkie</p>
+            </a>
+            <a href="https://www.twitch.tv/bluepanda3245" target="_blank" class="creator-box">
+                <img src="Images/BluePandaTwitch.jpg" alt="Twitch" class="creator-image">
+                <p class="creator-name">BluePanda2303</p>
+            </a>
+            <a href="https://www.twitch.tv/astoquack" target="_blank" class="creator-box">
+                <img src="Images/Astoquack.jpg" alt="Youtube" class="creator-image">
+                <p class="creator-name">Astoquack</p>
+            </a>
         </div>
     </div>
-    <footer>
-        <p>&copy; Axiom Network</p>
-    </footer>
+    <p class="footer-text">&copy; Axiom Network</p>
 </body>
 </html>
