--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
             <a href="ContentCreators.html" class="CC-link">
                 <img src="Images/Axiom Logo.webp" alt="Content Creators" class="CC-button">
             </a>
-            <a href="https://www.minecraft.net/en-us/store/minecraft-deluxe-collection-pc?tabs=%7B%22details%22%3A0%7D" target="_blank" class="plugins-link">
-                <img src="Images/Axiom Network Cropped.webp" alt="" class="plugins-button">
+            <a href="Plugins.html" class="plugins-link">
+                <img src="Images/Minecraft-plugins cropped.png" alt="" class="plugins-button">
             </a>
-            <a href="https://www.minecraft.net/en-us/store/minecraft-deluxe-collection-pc?tabs=%7B%22details%22%3A0%7D" target="_blank" class="box2-link">
-                <img src="Images/Minecraft-beach.jpg" alt="" class="box2-button">
+            <a href="https://iamcal.github.io/enchant-order/" target="_blank" class="box2-link">
+                <img src="Images/Axiom Network.webp" alt="" class="box2-button">
             </a>
         </div>
     </div>
-    <footer>
-        <p>&copy; Axiom Network</p>
-    </footer>
+    <p class="footer-text">&copy; Axiom Network</p>
 </body>
 </html>
