Final bug fixes (for now...)

--- a/ContentCreators.html
+++ b/ContentCreators.html
@@ -17,16 +17,14 @@
                 </a>
                 <div class="goBack-text">Go Back</div>
             </div>
-            <a href="" target="_blank" class="youtube-link">
-                <img src="Images/Youtube-image.png" alt="Youtube" class="youtube-button">
-            </a>
-            <a href="" target="_blank" class="twitch-link">
-                <img src="Images/twitch-name.png" alt="Content Creators" class="twitch-button">
-            </a>
-            <a href="#" class="colour-box red-box">
-            </a>
-            <a href="#" class="colour-box purple-box">
-            </a>
+            <div class="logo-container">
+                <a href="https://www.youtube.com" target="_blank" class="colour-box white-box">
+                    <img src="Images/Youtube-image.png" alt="Youtube" class="box-image">
+                </a>
+                <a href="https://www.twitch.tv" target="_blank" class="colour-box purple-box">
+                    <img src="Images/twitch-name.png" alt="Twitch" class="box-image">
+                </a>
+            </div>
         </div>
         <div class="creators-grid">
             <a href="https://www.youtube.com/@MichaelMusicYT" target="_blank" class="creator-box">
