--- a/Plugins.html
+++ b/Plugins.html
@@ -8,7 +8,15 @@
     <link rel="icon" href="images/Plains_Grass_Block.webp" type="image/x-icon">
 </head>
 <body>
-    <h1>Axiom Network</h1>
+    <h1>Axiom Plugins</h1>
+    <div class="centre-image-cc">
+        <div class="goBack-container">
+            <a href="index.html" class="goBack-link">
+                <img src="Images/Plains_Grass_Block.webp" alt="" class="goBack-button">
+            </a>
+            <div class="goBack-text">Go Back</div>
+        </div>
+    </div>
     <p class="footer-text">&copy; Axiom Network</p>
 </body>
 </html>
