--- a/ContentCreators.html
+++ b/ContentCreators.html
@@ -31,13 +31,21 @@
                 <img src="Images/MichaelMusic.jpg" alt="Youtube" class="creator-image">
                 <p class="creator-name">MichaelMusic</p>
             </a>
+            <a href="https://www.youtube.com/@Penjamonkie" target="_blank" class="creator-box">
+                <img src="Images/Penjamonkie.jpg" alt="Youtube" class="creator-image">
+                <p class="creator-name">Penjamonkie</p>
+            </a>
             <a href="https://www.youtube.com/@BluePanda_3245" target="_blank" class="creator-box">
                 <img src="Images/BluePanda.jpg" alt="Youtube">
                 <p class="creator-name">BluePanda2303</p>
             </a>
-            <a href="https://www.youtube.com/@Tibsiegames" target="_blank" class="creator-box">
-                <img src="Images/Tibsiegames.jpg" alt="Youtube" class="creator-image">
-                <p class="creator-name">Tibsie_Games</p>
+            <a href="https://www.twitch.tv/bluepanda3245" target="_blank" class="creator-box">
+                <img src="Images/BluePandaTwitch.jpg" alt="Twitch" class="creator-image">
+                <p class="creator-name">BluePanda2303</p>
+            </a>
+            <a href="https://www.youtube.com/@x7wv" target="_blank" class="creator-box">
+                <img src="Images/x7wv.jpg" alt="Youtube" class="creator-image">
+                <p class="creator-name">x7wv</p>
             </a>
             <a href="https://www.youtube.com/@Lettus-u6p" target="_blank" class="creator-box">
                 <img src="Images/Lettus.jpg" alt="Youtube" class="creator-image">
@@ -46,14 +54,6 @@
             <a href="https://www.youtube.com/@MrNotKnownMC" target="_blank" class="creator-box">
                 <img src="Images/MrNotKnown.jpg" alt="Youtube" class="creator-image">
                 <p class="creator-name">MrNotKnown</p>
-            </a>
-            <a href="https://www.youtube.com/@Penjamonkie" target="_blank" class="creator-box">
-                <img src="Images/Penjamonkie.jpg" alt="Youtube" class="creator-image">
-                <p class="creator-name">Penjamonkie</p>
-            </a>
-            <a href="https://www.twitch.tv/bluepanda3245" target="_blank" class="creator-box">
-                <img src="Images/BluePandaTwitch.jpg" alt="Twitch" class="creator-image">
-                <p class="creator-name">BluePanda2303</p>
             </a>
             <a href="https://www.twitch.tv/astoquack" target="_blank" class="creator-box">
                 <img src="Images/Astoquack.jpg" alt="Youtube" class="creator-image">
