Finished plugins page

--- a/Plugins.html
+++ b/Plugins.html
@@ -10,11 +10,25 @@
 <body>
     <h1>Axiom Plugins</h1>
     <div class="centre-image-cc">
-        <div class="goBack-container">
+        <div class="goBack-container plugins-goBack">
             <a href="index.html" class="goBack-link">
                 <img src="Images/Plains_Grass_Block.webp" alt="" class="goBack-button">
             </a>
             <div class="goBack-text">Go Back</div>
+        </div>
+        <div class="topic-content">
+            <div class="topic-card">
+                <img src="images/Minecraft-plugins.jpg" alt="Infuse">
+                <h2 class="topic-card-text">Infuse</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/Minecraft-plugins.jpg" alt="Lifesteal">
+                <h2 class="topic-card-text">Lifesteal</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/Minecraft-plugins.jpg" alt="Easy Villagers">
+                <h2 class="topic-card-text">Easy Villagers</h2>
+            </div>
         </div>
     </div>
     <p class="footer-text">&copy; Axiom Network</p>
