--- a/ContentCreators.html
+++ b/ContentCreators.html
@@ -4,28 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Content Creators</title>
+    <title>Axiom Network</title>
     <link rel="icon" href="images/Plains_Grass_Block.webp" type="image/x-icon">
 </head>
-<body>
+<body class="content-creators-page">
+    <header>
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="https://discord.gg/QDky4t8pTC" target="_blank" class="nav-link">Discord</a></li>
+                <li><a href="ContentCreators.html" class="nav-link">Content Creators</a></li>
+                <li><a href="Plugins.html" class="nav-link">Store</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>Co<span class="underline">ntent Creato</span>rs</h1>
-    <div class="content-creators">
-        <div class="centre-image-cc">
-            <div class="goBack-container">
-                <a href="index.html" class="goBack-link">
-                    <img src="Images/Plains_Grass_Block.webp" alt="" class="goBack-button">
-                </a>
-                <div class="goBack-text">Go Back</div>
-            </div>
-            <div class="logo-container">
-                <a href="https://www.youtube.com" target="_blank" class="colour-box white-box">
-                    <img src="Images/Youtube-image.png" alt="Youtube" class="box-image">
-                </a>
-                <a href="https://www.twitch.tv" target="_blank" class="colour-box purple-box">
-                    <img src="Images/twitch-name.png" alt="Twitch" class="box-image">
-                </a>
-            </div>
-        </div>
+
+    <div class="content-creators-section">
         <div class="creators-grid">
             <a href="https://www.youtube.com/@MichaelMusicYT" target="_blank" class="creator-box">
                 <img src="Images/MichaelMusic.jpg" alt="Youtube" class="creator-image">
@@ -36,7 +32,7 @@
                 <p class="creator-name">Penjamonkie</p>
             </a>
             <a href="https://www.youtube.com/@BluePanda_3245" target="_blank" class="creator-box">
-                <img src="Images/BluePanda.jpg" alt="Youtube">
+                <img src="Images/BluePanda.jpg" alt="Youtube" class="creator-image">
                 <p class="creator-name">BluePanda2303</p>
             </a>
             <a href="https://www.twitch.tv/bluepanda3245" target="_blank" class="creator-box">
@@ -61,6 +57,7 @@
             </a>
         </div>
     </div>
+
     <p class="footer-text">&copy; Axiom Network</p>
 </body>
 </html>
