--- a/Plugins.html
+++ b/Plugins.html
@@ -7,28 +7,36 @@
     <title>Axiom Network</title>
     <link rel="icon" href="images/Plains_Grass_Block.webp" type="image/x-icon">
 </head>
-<body>
-    <h1>Axiom Plugins</h1>
+<body class="store-page">
+    <header>
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="https://discord.gg/QDky4t8pTC" target="_blank" class="nav-link">Discord</a></li>
+                <li><a href="ContentCreators.html" class="nav-link">Content Creators</a></li>
+                <li><a href="Plugins.html" class="nav-link">Store</a></li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Axiom Store</h1>
     <div class="centre-image-cc">
-        <div class="goBack-container plugins-goBack">
-            <a href="index.html" class="goBack-link">
-                <img src="Images/Plains_Grass_Block.webp" alt="" class="goBack-button">
-            </a>
-            <div class="goBack-text">Go Back</div>
-        </div>
         <div class="topic-content">
-            <div class="topic-card">
-                <img src="images/Minecraft-plugins.jpg" alt="Infuse">
-                <h2 class="topic-card-text">Infuse</h2>
-            </div>
-            <div class="topic-card">
-                <img src="images/Minecraft-plugins.jpg" alt="Lifesteal">
-                <h2 class="topic-card-text">Lifesteal</h2>
-            </div>
-            <div class="topic-card">
-                <img src="images/Minecraft-plugins.jpg" alt="Easy Villagers">
-                <h2 class="topic-card-text">Easy Villagers</h2>
-            </div>
+            <a href="" target="_blank" class="crate">
+                <img src="" alt="" class="creator-image">
+                <p class="crate-name">Common Crate</p>
+            </a>
+            <a href="" target="_blank" class="crate">
+                <img src="" alt="" class="creator-image">
+                <p class="crate-name">Epic Crate</p>
+            </a>
+            <a href="" target="_blank" class="crate">
+                <img src="" alt="" class="creator-image">
+                <p class="crate-name">Mythical Crate</p>
+            </a>
+            <a href="" target="_blank" class="crate">
+                <img src="" alt="" class="creator-image">
+                <p class="crate-name">Premium Crate</p>
+            </a>
         </div>
     </div>
     <p class="footer-text">&copy; Axiom Network</p>
