--- a/index.html
+++ b/index.html
@@ -4,27 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Axiom Network</title>
     <link rel="icon" href="images/Plains_Grass_Block.webp" type="image/x-icon">
+    <title>Axiom Network</title>
 </head>
-<body>
-    <h1>Axiom Network</h1>
-    <div class="content">
-        <div class="centre-image">
-            <a href="https://discord.gg/QDky4t8pTC" target="_blank" class="discord-link">
-                <img src="Images/discord-logo-1080-x-1920-4jguqamuc0vqmh0u (1).jpg" alt="Join our Discord" class="discord-button">
-            </a>
-            <a href="ContentCreators.html" class="CC-link">
-                <img src="Images/Axiom Logo.webp" alt="Content Creators" class="CC-button">
-            </a>
-            <a href="Plugins.html" class="plugins-link">
-                <img src="Images/Minecraft-plugins cropped.png" alt="" class="plugins-button">
-            </a>
-            <a href="https://iamcal.github.io/enchant-order/" target="_blank" class="box2-link">
-                <img src="Images/Axiom Network.webp" alt="" class="box2-button">
-            </a>
-        </div>
-    </div>
+<body class="index-section">
+    <header>
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="https://discord.gg/QDky4t8pTC" target="_blank" class="nav-link">Discord</a></li>
+                <li><a href="ContentCreators.html" class="nav-link">Content Creators</a></li>
+                <li><a href="Plugins.html" class="nav-link">Store</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <p class="footer-text">&copy; Axiom Network</p>
 </body>
 </html>
