--- a/Modes.html
+++ b/Modes.html
@@ -7,7 +7,7 @@
     <title>Axiom Network</title>
     <link rel="icon" href="images/Plains_Grass_Block.webp" type="image/x-icon">
 </head>
-<body class="store-page">
+<body class="modes-page">
     <header>
         <nav class="navbar">
             <ul class="nav-links">
@@ -19,25 +19,10 @@
             </ul>
         </nav>
     </header>
-    <h1>Axiom Store</h1>
+    <h1>Gamemodes</h1>
     <div class="centre-image-cc">
         <div class="topic-content">
-            <a href="" target="_blank" class="crate">
-                <img src="" alt="" class="creator-image">
-                <p class="crate-name">Common Crate</p>
-            </a>
-            <a href="" target="_blank" class="crate">
-                <img src="" alt="" class="creator-image">
-                <p class="crate-name">Epic Crate</p>
-            </a>
-            <a href="" target="_blank" class="crate">
-                <img src="" alt="" class="creator-image">
-                <p class="crate-name">Mythical Crate</p>
-            </a>
-            <a href="" target="_blank" class="crate">
-                <img src="" alt="" class="creator-image">
-                <p class="crate-name">Premium Crate</p>
-            </a>
+
         </div>
     </div>
     <p class="footer-text">&copy; Axiom Network</p>
