--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="https://discord.gg/QDky4t8pTC" target="_blank" class="nav-link">Discord</a></li>
                 <li><a href="ContentCreators.html" class="nav-link">Content Creators</a></li>
+                <li><a href="Modes.html" class="nav-link">Gamemodes</a></li>
                 <li><a href="Plugins.html" class="nav-link">Store</a></li>
             </ul>
         </nav>
