--- a/ContentCreators.html
+++ b/ContentCreators.html
@@ -25,31 +25,31 @@
     <div class="content-creators-section">
         <div class="creators-grid">
             <a href="https://www.youtube.com/@MichaelMusicYT" target="_blank" class="creator-box">
-                <img src="Images/MichaelMusic.jpg" alt="Youtube" class="creator-image">
+                <img src="" alt="Youtube" class="creator-image">
                 <p class="creator-name">MichaelMusic</p>
             </a>
             <a href="https://www.youtube.com/@Penjamonkie" target="_blank" class="creator-box">
-                <img src="Images/Penjamonkie.jpg" alt="Youtube" class="creator-image">
+                <img src="" alt="Youtube" class="creator-image">
                 <p class="creator-name">Penjamonkie</p>
             </a>
             <a href="https://www.youtube.com/@BluePanda_3245" target="_blank" class="creator-box">
-                <img src="Images/BluePanda.jpg" alt="Youtube" class="creator-image">
+                <img src="" alt="Youtube" class="creator-image">
                 <p class="creator-name">BluePanda2303</p>
             </a>
             <a href="https://www.twitch.tv/bluepanda3245" target="_blank" class="creator-box">
-                <img src="Images/BluePandaTwitch.jpg" alt="Twitch" class="creator-image">
+                <img src="" alt="Twitch" class="creator-image">
                 <p class="creator-name">BluePanda2303</p>
             </a>
             <a href="https://www.youtube.com/@x7wv" target="_blank" class="creator-box">
-                <img src="Images/x7wv.jpg" alt="Youtube" class="creator-image">
+                <img src="" alt="Youtube" class="creator-image">
                 <p class="creator-name">x7wv</p>
             </a>
             <a href="https://www.youtube.com/@Lettus-u6p" target="_blank" class="creator-box">
-                <img src="Images/Lettus.jpg" alt="Youtube" class="creator-image">
+                <img src="" alt="Youtube" class="creator-image">
                 <p class="creator-name">Lettus</p>
             </a>
             <a href="https://www.youtube.com/@MrNotKnownMC" target="_blank" class="creator-box">
-                <img src="Images/MrNotKnown.jpg" alt="Youtube" class="creator-image">
+                <img src="" alt="Youtube" class="creator-image">
                 <p class="creator-name">MrNotKnown</p>
             </a>
             </a>
